--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 </head>
 <body>
 
+  <nav class="button">
+    <ul>
+      <li><a href="#"><b>Log In</b></a></li>
+      <li><a href="#"><b>Sign Up</b></a></li>
+      <li><a href="#"><b>Buy and Sell</b></a></li>
+      <li><a href="#"><b>Contact</b></a></li>
+    </ul>
+  </nav>
+
   <div class="container">
 
-    <nav class="button">
-      <ul>
-        <li><a href="#"><b>Cat_link_1</b></a></li>
-        <li><a href="#"><b>Cat_Link_2</b></a></li>
-        <li><a href="#"><b>Contact</b></a></li>
-      </ul>
-    </nav>
-
     <div class="main">
-      <h1>Aids' Cat Nip Sharing</h1>
+      <h1>Aids' Cat Nip Marketplace</h1>
   		<h3>Share your catnip with the world...or just me.</h3>
 			<p>Need some nip to get you through the day? Use Aid's nip service to get your fix!</p> 
 
@@ -30,7 +31,6 @@
 
       <p>Since cats were venerated in ancient Egypt, they were commonly believed to have been domesticated there,[11] but there may have been instances of domestication as early as the Neolithic from around 9,500 years ago (7,500 BC).[12] A genetic study in 2007 concluded that domestic cats are descended from Near Eastern wildcats, having diverged around 8,000 BC in West Asia.[11][13] A 2016 study found that leopard cats were undergoing domestication independently in China around 5,500 BC, though this line of partially domesticated cats leaves no trace in the domesticated populations of today.</p>
 
-
       <p>Here is a <a href="http://s1094.photobucket.com/user/corvettes13/media/cats2.jpg.html">list</a> of cats.</p>
  			<iframe width="640" height="480" src="https://www.youtube.com/embed/Dt4zvJNXbdI" frameborder="0" allowfullscreen></iframe>
     </div>
@@ -38,4 +38,3 @@
   <p id="footer">&copy; Sponsored by Soma Recording Studios</p>
 </body>  
 </html>
-
